# SmartHomePCControl

./: .gitignore  GEMINI.md  README.md  SmartHomePCControl.sln  docker-compose.yml
.github/workflows/: cpp-build.yml  dotnet.yml
.serena/: project.yml
.serena/memories/: codebase_structure.md  project_purpose.md  suggested_commands.md  task_completion_guidelines.md  tech_stack.md
Linux/: pc-controller-embedded@.service  shutdown-listener.cpp  shutdown-listener@.service  wakeup.cpp  wol@.service
SmartHomePCControl/: Dockerfile  Program.cs  RequestLoggingMiddleware.cs  ResponseLoggingMiddleware.cs  SmartHomePCControl.csproj
SmartHomePCControl-CPP/: .gitignore  CMakeLists.txt  README.md
SmartHomePCControl-CPP/src/: main.cpp
SmartHomePCControl-Windows/: build.bat  smart_home_pc_controller.cpp
SmartHomePCControl.Tests/: SmartHomePCControl.Tests.csproj
SmartHomePCControl.Tests/Services/: WakeOnLanServiceTest.cs  WakeOnLanTest.cs
SmartHomePCControl/Controllers/: AuthController.cs  PcController.cs  PcControllerRoute.cs
SmartHomePCControl/Linux/: shutdown-listener.service  shutdown-listener.sh  wakeup.cpp  wol@.service
SmartHomePCControl/Middleware/: MiddlewareExtensions.cs  RequestLoggingMiddleware.cs  ResponseLoggingMiddleware.cs
SmartHomePCControl/Models/: Device.cs  DeviceAction.cs  DeviceAttributes.cs  DeviceCommands.cs  DeviceInfo.cs  DeviceName.cs  DeviceTraits.cs  DeviceType.cs  ExecuteDto.cs  Models.cs  QueryDto.cs  QueryStatus.cs  SyncDto.cs
SmartHomePCControl/Properties/: launchSettings.json
SmartHomePCControl/Services/: WakeOnLan.cs  (+1 more)
(+1 files in other folders)
